--- a/docs/_layouts/default.html
+++ b/docs/_layouts/default.html
@@ -4,10 +4,10 @@
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1, maximum-scale=1, user-scalable=no">
     <title>{% if page.title %}{{ page.title }}{% endif %}</title>
-    <link rel="shortcut icon" type="image/png" href="/assets/images/ps.png">
+    <link rel="shortcut icon" type="image/png" href="/mario-pappagallo/assets/images/favicon.ico">
     <!-- Latest compiled and minified Bootstrap CSS -->
     <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0-beta.2/css/bootstrap.min.css" integrity="sha384-PsH8R72JQ3SOdhVi3uxftmaW6Vc51MKb0q5P2rRUpPvrszuE4W1povHYgTpBfshb" crossorigin="anonymous">
-    <link rel="stylesheet" type="text/css" href="/assets/style.css">
+    <link rel="stylesheet" type="text/css" href="/mario-pappagallo/assets/style.css">
   </head>
   <body>
     <div class="container">
