--- a/docs/_layouts/lyrics.html
+++ b/docs/_layouts/lyrics.html
@@ -1,5 +1,5 @@
 ---
 layout: default
 ---
-<div id="back"><a href="{{ site.url }}">← Back</a></div>
+<div id="back"><a href="{{ site.url }}">← Indietro</a></div>
 {{ content }}
