--- a/docs/assets/style.css
+++ b/docs/assets/style.css
@@ -7,6 +7,18 @@ body {
   color: #4e5256;
   font-size: 95%;
   padding-left: 8px;
+  position: relative;
+}
+
+.blockquote:before {
+  color: #eee;
+  content: '\201C'; /* It's a quote. */
+  display: inline;
+  font-size: 800%;
+  left: 3px;
+  position: absolute;
+  top: -62px;
+  z-index: -1;
 }
 
 .blockquote-footer {
