--- a/docs/assets/style.css
+++ b/docs/assets/style.css
@@ -4,7 +4,7 @@ body {
 
 .blockquote {
   border-left: 4px solid #ccc;
-  color: #4e5256;
+  color: #ddd;
   font-size: 95%;
   padding-left: 8px;
   position: relative;
