--- a/docs/assets/style.css
+++ b/docs/assets/style.css
@@ -3,8 +3,8 @@ body {
 }
 
 .blockquote {
-  border-left: 4px solid #ccc;
-  color: #ddd;
+  border-left: 4px solid #ddd;
+  color: #4e5256;
   font-size: 95%;
   padding-left: 8px;
   position: relative;
